[package]
name = "sdf-walker"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2018"

[features]
embedded = []
file = []
generated = ["nom"]

[dependencies]
luminance = "0.39.0"
luminance-derive = "0.5.3"
luminance-glfw = "0.12.1"
luminance-windowing = "0.8.2"
nalgebra-glm = "0.7.0"

[dependencies.nom]
version = "5.1.2"
optional = true
