[package]
name = "sdf-walker"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2018"

[dependencies]
luminance-glutin = { path = "./luminance-glutin" }
nalgebra-glm = "0.7.0"
glutin = { version = "0.24.0", default-features = false }
image = "0.23.10"
luminance = "0.42.1"
luminance-derive = "0.6.2"
nom = "5.1.2"
